grojs/GedcomDateParser.js
GedcomDateParser = (function(){
  /* Generated by PEG.js (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.grammarParser.SyntaxError| describing the error.
     */
    parse: function(input) {
      var pos = 0;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quoteString(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')        // backslash
          .replace(/"/g, '\\"')          // closing quote character
          .replace(/\r/g, '\\r')         // carriage return
          .replace(/\u2028/g, '\\u2028') // line separator
          .replace(/\u2029/g, '\\u2029') // paragraph separator
          .replace(/\n/g, '\\n')         // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function arrayContains(array, value) {
        /*
         * Stupid IE does not have Array.prototype.indexOf, otherwise this
         * function would be a one-liner.
         */
        var length = array.length;
        for (var i = 0; i < length; i++) {
          if (array[i] === value) {
            return true;
          }
        }
        return false;
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        if (!arrayContains(rightmostMatchFailuresExpected, failure)) {
          rightmostMatchFailuresExpected.push(failure);
        }
      }
      
      function parse_start(context) {
        var cacheKey = "start" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var result6 = parse_date_int(context);
        if (result6 !== null) {
          var result0 = result6;
        } else {
          var result5 = parse_date_phrase(context);
          if (result5 !== null) {
            var result0 = result5;
          } else {
            var result4 = parse_date_period(context);
            if (result4 !== null) {
              var result0 = result4;
            } else {
              var result3 = parse_date_range(context);
              if (result3 !== null) {
                var result0 = result3;
              } else {
                var result2 = parse_date_approx(context);
                if (result2 !== null) {
                  var result0 = result2;
                } else {
                  var result1 = parse_date(context);
                  if (result1 !== null) {
                    var result0 = result1;
                  } else {
                    var result0 = null;;
                  };
                };
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_date_int(context) {
        var cacheKey = "date_int" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos, 3) === "INT") {
          var result2 = "INT";
          pos += 3;
        } else {
          var result2 = null;
          if (context.reportMatchFailures) {
            matchFailed(quoteString("INT"));
          }
        }
        if (result2 !== null) {
          var result3 = parse_S(context);
          if (result3 !== null) {
            var result4 = parse_date(context);
            if (result4 !== null) {
              var result5 = parse_S(context);
              if (result5 !== null) {
                var result6 = parse_date_phrase(context);
                if (result6 !== null) {
                  var result1 = [result2, result3, result4, result5, result6];
                } else {
                  var result1 = null;
                  pos = savedPos0;
                }
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(ymd) { return ymd; })(result1[2])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_date_phrase(context) {
        var cacheKey = "date_phrase" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos, 1) === "(") {
          var result2 = "(";
          pos += 1;
        } else {
          var result2 = null;
          if (context.reportMatchFailures) {
            matchFailed(quoteString("("));
          }
        }
        if (result2 !== null) {
          var result3 = [];
          if (input.substr(pos).match(/^[^)]/) !== null) {
            var result5 = input.charAt(pos);
            pos++;
          } else {
            var result5 = null;
            if (context.reportMatchFailures) {
              matchFailed("[^)]");
            }
          }
          while (result5 !== null) {
            result3.push(result5);
            if (input.substr(pos).match(/^[^)]/) !== null) {
              var result5 = input.charAt(pos);
              pos++;
            } else {
              var result5 = null;
              if (context.reportMatchFailures) {
                matchFailed("[^)]");
              }
            }
          }
          if (result3 !== null) {
            if (input.substr(pos, 1) === ")") {
              var result4 = ")";
              pos += 1;
            } else {
              var result4 = null;
              if (context.reportMatchFailures) {
                matchFailed(quoteString(")"));
              }
            }
            if (result4 !== null) {
              var result1 = [result2, result3, result4];
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(str) { return str.join(""); })(result1[1])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_date_period(context) {
        var cacheKey = "date_period" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos2 = pos;
        if (input.substr(pos, 4) === "FROM") {
          var result13 = "FROM";
          pos += 4;
        } else {
          var result13 = null;
          if (context.reportMatchFailures) {
            matchFailed(quoteString("FROM"));
          }
        }
        if (result13 !== null) {
          var result14 = parse_S(context);
          if (result14 !== null) {
            var result15 = parse_date(context);
            if (result15 !== null) {
              var result16 = parse_S(context);
              if (result16 !== null) {
                if (input.substr(pos, 2) === "TO") {
                  var result17 = "TO";
                  pos += 2;
                } else {
                  var result17 = null;
                  if (context.reportMatchFailures) {
                    matchFailed(quoteString("TO"));
                  }
                }
                if (result17 !== null) {
                  var result18 = parse_S(context);
                  if (result18 !== null) {
                    var result19 = parse_date(context);
                    if (result19 !== null) {
                      var result12 = [result13, result14, result15, result16, result17, result18, result19];
                    } else {
                      var result12 = null;
                      pos = savedPos2;
                    }
                  } else {
                    var result12 = null;
                    pos = savedPos2;
                  }
                } else {
                  var result12 = null;
                  pos = savedPos2;
                }
              } else {
                var result12 = null;
                pos = savedPos2;
              }
            } else {
              var result12 = null;
              pos = savedPos2;
            }
          } else {
            var result12 = null;
            pos = savedPos2;
          }
        } else {
          var result12 = null;
          pos = savedPos2;
        }
        var result11 = result12 !== null
          ? (function(f, t) { return { from:f, to:t }; })(result12[2], result12[6])
          : null;
        if (result11 !== null) {
          var result0 = result11;
        } else {
          var savedPos1 = pos;
          if (input.substr(pos, 4) === "FROM") {
            var result8 = "FROM";
            pos += 4;
          } else {
            var result8 = null;
            if (context.reportMatchFailures) {
              matchFailed(quoteString("FROM"));
            }
          }
          if (result8 !== null) {
            var result9 = parse_S(context);
            if (result9 !== null) {
              var result10 = parse_date(context);
              if (result10 !== null) {
                var result7 = [result8, result9, result10];
              } else {
                var result7 = null;
                pos = savedPos1;
              }
            } else {
              var result7 = null;
              pos = savedPos1;
            }
          } else {
            var result7 = null;
            pos = savedPos1;
          }
          var result6 = result7 !== null
            ? (function(f) { return { from:f       }; })(result7[2])
            : null;
          if (result6 !== null) {
            var result0 = result6;
          } else {
            var savedPos0 = pos;
            if (input.substr(pos, 2) === "TO") {
              var result3 = "TO";
              pos += 2;
            } else {
              var result3 = null;
              if (context.reportMatchFailures) {
                matchFailed(quoteString("TO"));
              }
            }
            if (result3 !== null) {
              var result4 = parse_S(context);
              if (result4 !== null) {
                var result5 = parse_date(context);
                if (result5 !== null) {
                  var result2 = [result3, result4, result5];
                } else {
                  var result2 = null;
                  pos = savedPos0;
                }
              } else {
                var result2 = null;
                pos = savedPos0;
              }
            } else {
              var result2 = null;
              pos = savedPos0;
            }
            var result1 = result2 !== null
              ? (function(t) { return {         to:t }; })(result2[2])
              : null;
            if (result1 !== null) {
              var result0 = result1;
            } else {
              var result0 = null;;
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_date_range(context) {
        var cacheKey = "date_range" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos2 = pos;
        if (input.substr(pos, 3) === "BET") {
          var result13 = "BET";
          pos += 3;
        } else {
          var result13 = null;
          if (context.reportMatchFailures) {
            matchFailed(quoteString("BET"));
          }
        }
        if (result13 !== null) {
          var result14 = parse_S(context);
          if (result14 !== null) {
            var result15 = parse_date(context);
            if (result15 !== null) {
              var result16 = parse_S(context);
              if (result16 !== null) {
                if (input.substr(pos, 3) === "AND") {
                  var result17 = "AND";
                  pos += 3;
                } else {
                  var result17 = null;
                  if (context.reportMatchFailures) {
                    matchFailed(quoteString("AND"));
                  }
                }
                if (result17 !== null) {
                  var result18 = parse_S(context);
                  if (result18 !== null) {
                    var result19 = parse_date(context);
                    if (result19 !== null) {
                      var result12 = [result13, result14, result15, result16, result17, result18, result19];
                    } else {
                      var result12 = null;
                      pos = savedPos2;
                    }
                  } else {
                    var result12 = null;
                    pos = savedPos2;
                  }
                } else {
                  var result12 = null;
                  pos = savedPos2;
                }
              } else {
                var result12 = null;
                pos = savedPos2;
              }
            } else {
              var result12 = null;
              pos = savedPos2;
            }
          } else {
            var result12 = null;
            pos = savedPos2;
          }
        } else {
          var result12 = null;
          pos = savedPos2;
        }
        var result11 = result12 !== null
          ? (function(a, b) { return { after:a, before:b }; })(result12[2], result12[6])
          : null;
        if (result11 !== null) {
          var result0 = result11;
        } else {
          var savedPos1 = pos;
          if (input.substr(pos, 3) === "AFT") {
            var result8 = "AFT";
            pos += 3;
          } else {
            var result8 = null;
            if (context.reportMatchFailures) {
              matchFailed(quoteString("AFT"));
            }
          }
          if (result8 !== null) {
            var result9 = parse_S(context);
            if (result9 !== null) {
              var result10 = parse_date(context);
              if (result10 !== null) {
                var result7 = [result8, result9, result10];
              } else {
                var result7 = null;
                pos = savedPos1;
              }
            } else {
              var result7 = null;
              pos = savedPos1;
            }
          } else {
            var result7 = null;
            pos = savedPos1;
          }
          var result6 = result7 !== null
            ? (function(a) { return { after:a           }; })(result7[2])
            : null;
          if (result6 !== null) {
            var result0 = result6;
          } else {
            var savedPos0 = pos;
            if (input.substr(pos, 3) === "BEF") {
              var result3 = "BEF";
              pos += 3;
            } else {
              var result3 = null;
              if (context.reportMatchFailures) {
                matchFailed(quoteString("BEF"));
              }
            }
            if (result3 !== null) {
              var result4 = parse_S(context);
              if (result4 !== null) {
                var result5 = parse_date(context);
                if (result5 !== null) {
                  var result2 = [result3, result4, result5];
                } else {
                  var result2 = null;
                  pos = savedPos0;
                }
              } else {
                var result2 = null;
                pos = savedPos0;
              }
            } else {
              var result2 = null;
              pos = savedPos0;
            }
            var result1 = result2 !== null
              ? (function(b) { return {          before:b }; })(result2[2])
              : null;
            if (result1 !== null) {
              var result0 = result1;
            } else {
              var result0 = null;;
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_date_approx(context) {
        var cacheKey = "date_approx" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos2 = pos;
        if (input.substr(pos, 3) === "ABT") {
          var result13 = "ABT";
          pos += 3;
        } else {
          var result13 = null;
          if (context.reportMatchFailures) {
            matchFailed(quoteString("ABT"));
          }
        }
        if (result13 !== null) {
          var result14 = parse_S(context);
          if (result14 !== null) {
            var result15 = parse_date(context);
            if (result15 !== null) {
              var result12 = [result13, result14, result15];
            } else {
              var result12 = null;
              pos = savedPos2;
            }
          } else {
            var result12 = null;
            pos = savedPos2;
          }
        } else {
          var result12 = null;
          pos = savedPos2;
        }
        var result11 = result12 !== null
          ? (function(ymd) { ymd.approx=true; return ymd; })(result12[2])
          : null;
        if (result11 !== null) {
          var result0 = result11;
        } else {
          var savedPos1 = pos;
          if (input.substr(pos, 3) === "CAL") {
            var result8 = "CAL";
            pos += 3;
          } else {
            var result8 = null;
            if (context.reportMatchFailures) {
              matchFailed(quoteString("CAL"));
            }
          }
          if (result8 !== null) {
            var result9 = parse_S(context);
            if (result9 !== null) {
              var result10 = parse_date(context);
              if (result10 !== null) {
                var result7 = [result8, result9, result10];
              } else {
                var result7 = null;
                pos = savedPos1;
              }
            } else {
              var result7 = null;
              pos = savedPos1;
            }
          } else {
            var result7 = null;
            pos = savedPos1;
          }
          var result6 = result7 !== null
            ? (function(ymd) { ymd.approx=true; return ymd; })(result7[2])
            : null;
          if (result6 !== null) {
            var result0 = result6;
          } else {
            var savedPos0 = pos;
            if (input.substr(pos, 3) === "EST") {
              var result3 = "EST";
              pos += 3;
            } else {
              var result3 = null;
              if (context.reportMatchFailures) {
                matchFailed(quoteString("EST"));
              }
            }
            if (result3 !== null) {
              var result4 = parse_S(context);
              if (result4 !== null) {
                var result5 = parse_date(context);
                if (result5 !== null) {
                  var result2 = [result3, result4, result5];
                } else {
                  var result2 = null;
                  pos = savedPos0;
                }
              } else {
                var result2 = null;
                pos = savedPos0;
              }
            } else {
              var result2 = null;
              pos = savedPos0;
            }
            var result1 = result2 !== null
              ? (function(ymd) { ymd.approx=true; return ymd; })(result2[2])
              : null;
            if (result1 !== null) {
              var result0 = result1;
            } else {
              var result0 = null;;
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_date(context) {
        var cacheKey = "date" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos4 = pos;
        if (input.substr(pos, 3) === "@#D") {
          var result36 = "@#D";
          pos += 3;
        } else {
          var result36 = null;
          if (context.reportMatchFailures) {
            matchFailed(quoteString("@#D"));
          }
        }
        if (result36 !== null) {
          if (input.substr(pos, 9) === "GREGORIAN") {
            var result37 = "GREGORIAN";
            pos += 9;
          } else {
            var result37 = null;
            if (context.reportMatchFailures) {
              matchFailed(quoteString("GREGORIAN"));
            }
          }
          if (result37 !== null) {
            if (input.substr(pos, 1) === "@") {
              var result38 = "@";
              pos += 1;
            } else {
              var result38 = null;
              if (context.reportMatchFailures) {
                matchFailed(quoteString("@"));
              }
            }
            if (result38 !== null) {
              var result39 = parse_OS(context);
              if (result39 !== null) {
                var result40 = parse_date_gregor(context);
                if (result40 !== null) {
                  var result35 = [result36, result37, result38, result39, result40];
                } else {
                  var result35 = null;
                  pos = savedPos4;
                }
              } else {
                var result35 = null;
                pos = savedPos4;
              }
            } else {
              var result35 = null;
              pos = savedPos4;
            }
          } else {
            var result35 = null;
            pos = savedPos4;
          }
        } else {
          var result35 = null;
          pos = savedPos4;
        }
        var result34 = result35 !== null
          ? (function(cal, ymd) { return ymd; })(result35[1], result35[4])
          : null;
        if (result34 !== null) {
          var result0 = result34;
        } else {
          var savedPos3 = pos;
          if (input.substr(pos, 3) === "@#D") {
            var result29 = "@#D";
            pos += 3;
          } else {
            var result29 = null;
            if (context.reportMatchFailures) {
              matchFailed(quoteString("@#D"));
            }
          }
          if (result29 !== null) {
            if (input.substr(pos, 6) === "JULIAN") {
              var result30 = "JULIAN";
              pos += 6;
            } else {
              var result30 = null;
              if (context.reportMatchFailures) {
                matchFailed(quoteString("JULIAN"));
              }
            }
            if (result30 !== null) {
              if (input.substr(pos, 1) === "@") {
                var result31 = "@";
                pos += 1;
              } else {
                var result31 = null;
                if (context.reportMatchFailures) {
                  matchFailed(quoteString("@"));
                }
              }
              if (result31 !== null) {
                var result32 = parse_OS(context);
                if (result32 !== null) {
                  var result33 = parse_date_julian(context);
                  if (result33 !== null) {
                    var result28 = [result29, result30, result31, result32, result33];
                  } else {
                    var result28 = null;
                    pos = savedPos3;
                  }
                } else {
                  var result28 = null;
                  pos = savedPos3;
                }
              } else {
                var result28 = null;
                pos = savedPos3;
              }
            } else {
              var result28 = null;
              pos = savedPos3;
            }
          } else {
            var result28 = null;
            pos = savedPos3;
          }
          var result27 = result28 !== null
            ? (function(cal, ymd) { ymd.julian = true; return ymd; })(result28[1], result28[4])
            : null;
          if (result27 !== null) {
            var result0 = result27;
          } else {
            var savedPos2 = pos;
            if (input.substr(pos, 3) === "@#D") {
              var result22 = "@#D";
              pos += 3;
            } else {
              var result22 = null;
              if (context.reportMatchFailures) {
                matchFailed(quoteString("@#D"));
              }
            }
            if (result22 !== null) {
              if (input.substr(pos, 6) === "HEBREW") {
                var result23 = "HEBREW";
                pos += 6;
              } else {
                var result23 = null;
                if (context.reportMatchFailures) {
                  matchFailed(quoteString("HEBREW"));
                }
              }
              if (result23 !== null) {
                if (input.substr(pos, 1) === "@") {
                  var result24 = "@";
                  pos += 1;
                } else {
                  var result24 = null;
                  if (context.reportMatchFailures) {
                    matchFailed(quoteString("@"));
                  }
                }
                if (result24 !== null) {
                  var result25 = parse_OS(context);
                  if (result25 !== null) {
                    var result26 = parse_date_hebrew(context);
                    if (result26 !== null) {
                      var result21 = [result22, result23, result24, result25, result26];
                    } else {
                      var result21 = null;
                      pos = savedPos2;
                    }
                  } else {
                    var result21 = null;
                    pos = savedPos2;
                  }
                } else {
                  var result21 = null;
                  pos = savedPos2;
                }
              } else {
                var result21 = null;
                pos = savedPos2;
              }
            } else {
              var result21 = null;
              pos = savedPos2;
            }
            var result20 = result21 !== null
              ? (function(cal, ymd) { return null; /* not yet implemented */ })(result21[1], result21[4])
              : null;
            if (result20 !== null) {
              var result0 = result20;
            } else {
              var savedPos1 = pos;
              if (input.substr(pos, 3) === "@#D") {
                var result15 = "@#D";
                pos += 3;
              } else {
                var result15 = null;
                if (context.reportMatchFailures) {
                  matchFailed(quoteString("@#D"));
                }
              }
              if (result15 !== null) {
                if (input.substr(pos, 8) === "FRENCH R") {
                  var result16 = "FRENCH R";
                  pos += 8;
                } else {
                  var result16 = null;
                  if (context.reportMatchFailures) {
                    matchFailed(quoteString("FRENCH R"));
                  }
                }
                if (result16 !== null) {
                  if (input.substr(pos, 1) === "@") {
                    var result17 = "@";
                    pos += 1;
                  } else {
                    var result17 = null;
                    if (context.reportMatchFailures) {
                      matchFailed(quoteString("@"));
                    }
                  }
                  if (result17 !== null) {
                    var result18 = parse_OS(context);
                    if (result18 !== null) {
                      var result19 = parse_date_french(context);
                      if (result19 !== null) {
                        var result14 = [result15, result16, result17, result18, result19];
                      } else {
                        var result14 = null;
                        pos = savedPos1;
                      }
                    } else {
                      var result14 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result14 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result14 = null;
                  pos = savedPos1;
                }
              } else {
                var result14 = null;
                pos = savedPos1;
              }
              var result13 = result14 !== null
                ? (function(cal, ymd) { return null; /* not yet implemented */ })(result14[1], result14[4])
                : null;
              if (result13 !== null) {
                var result0 = result13;
              } else {
                var savedPos0 = pos;
                if (input.substr(pos, 3) === "@#D") {
                  var result7 = "@#D";
                  pos += 3;
                } else {
                  var result7 = null;
                  if (context.reportMatchFailures) {
                    matchFailed(quoteString("@#D"));
                  }
                }
                if (result7 !== null) {
                  var result8 = parse_other_cal(context);
                  if (result8 !== null) {
                    if (input.substr(pos, 1) === "@") {
                      var result9 = "@";
                      pos += 1;
                    } else {
                      var result9 = null;
                      if (context.reportMatchFailures) {
                        matchFailed(quoteString("@"));
                      }
                    }
                    if (result9 !== null) {
                      var result10 = parse_OS(context);
                      if (result10 !== null) {
                        var result11 = [];
                        if (input.length > pos) {
                          var result12 = input.charAt(pos);
                          pos++;
                        } else {
                          var result12 = null;
                          if (context.reportMatchFailures) {
                            matchFailed('any character');
                          }
                        }
                        while (result12 !== null) {
                          result11.push(result12);
                          if (input.length > pos) {
                            var result12 = input.charAt(pos);
                            pos++;
                          } else {
                            var result12 = null;
                            if (context.reportMatchFailures) {
                              matchFailed('any character');
                            }
                          }
                        }
                        if (result11 !== null) {
                          var result6 = [result7, result8, result9, result10, result11];
                        } else {
                          var result6 = null;
                          pos = savedPos0;
                        }
                      } else {
                        var result6 = null;
                        pos = savedPos0;
                      }
                    } else {
                      var result6 = null;
                      pos = savedPos0;
                    }
                  } else {
                    var result6 = null;
                    pos = savedPos0;
                  }
                } else {
                  var result6 = null;
                  pos = savedPos0;
                }
                var result5 = result6 !== null
                  ? (function(cal, str) { return cal+": "+str.join(""); })(result6[1], result6[4])
                  : null;
                if (result5 !== null) {
                  var result0 = result5;
                } else {
                  var result4 = parse_date_slash(context);
                  var result3 = result4 !== null
                    ? (function(ymd) { ymd.julian = true; return ymd; })(result4)
                    : null;
                  if (result3 !== null) {
                    var result0 = result3;
                  } else {
                    var result2 = parse_date_gregor(context);
                    var result1 = result2 !== null
                      ? (function(ymd) { return ymd; })(result2)
                      : null;
                    if (result1 !== null) {
                      var result0 = result1;
                    } else {
                      var result0 = null;;
                    };
                  };
                };
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_other_cal(context) {
        var cacheKey = "other_cal" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var savedReportMatchFailuresVar0 = context.reportMatchFailures;
        context.reportMatchFailures = false;
        var result5 = parse_known_cal(context);
        context.reportMatchFailures = savedReportMatchFailuresVar0;
        if (result5 === null) {
          var result2 = '';
        } else {
          var result2 = null;
          pos = savedPos1;
        }
        if (result2 !== null) {
          if (input.substr(pos).match(/^[^@]/) !== null) {
            var result4 = input.charAt(pos);
            pos++;
          } else {
            var result4 = null;
            if (context.reportMatchFailures) {
              matchFailed("[^@]");
            }
          }
          if (result4 !== null) {
            var result3 = [];
            while (result4 !== null) {
              result3.push(result4);
              if (input.substr(pos).match(/^[^@]/) !== null) {
                var result4 = input.charAt(pos);
                pos++;
              } else {
                var result4 = null;
                if (context.reportMatchFailures) {
                  matchFailed("[^@]");
                }
              }
            }
          } else {
            var result3 = null;
          }
          if (result3 !== null) {
            var result1 = [result2, result3];
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(cal) { return cal.join(""); })(result1[1])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_known_cal(context) {
        var cacheKey = "known_cal" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        if (input.substr(pos, 9) === "GREGORIAN") {
          var result4 = "GREGORIAN";
          pos += 9;
        } else {
          var result4 = null;
          if (context.reportMatchFailures) {
            matchFailed(quoteString("GREGORIAN"));
          }
        }
        if (result4 !== null) {
          var result0 = result4;
        } else {
          if (input.substr(pos, 6) === "JULIAN") {
            var result3 = "JULIAN";
            pos += 6;
          } else {
            var result3 = null;
            if (context.reportMatchFailures) {
              matchFailed(quoteString("JULIAN"));
            }
          }
          if (result3 !== null) {
            var result0 = result3;
          } else {
            if (input.substr(pos, 6) === "HEBREW") {
              var result2 = "HEBREW";
              pos += 6;
            } else {
              var result2 = null;
              if (context.reportMatchFailures) {
                matchFailed(quoteString("HEBREW"));
              }
            }
            if (result2 !== null) {
              var result0 = result2;
            } else {
              if (input.substr(pos, 8) === "FRENCH R") {
                var result1 = "FRENCH R";
                pos += 8;
              } else {
                var result1 = null;
                if (context.reportMatchFailures) {
                  matchFailed(quoteString("FRENCH R"));
                }
              }
              if (result1 !== null) {
                var result0 = result1;
              } else {
                var result0 = null;;
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_date_gregor(context) {
        var cacheKey = "date_gregor" + '@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result4 = parse_date_gregor_raw(context);
        if (result4 !== null) {
          var result5 = parse_S(context);
          if (result5 !== null) {
            var result6 = parse_epoch(context);
            if (result6 !== null) {
              var result3 = [result4, result5, result6];
            } else {
              var result3 = null;
              pos = savedPos0;
            }
          } else {
            var result3 = null;
            pos = savedPos0;
          }
        } else {
          var result3 = null;
          pos = savedPos0;
        }
